--- a/css/style.css
+++ b/css/style.css
@@ -326,8 +326,14 @@ body {
 }
 
 .first-part__content {
-  padding: 171px 0px 401px 0px;
+  padding: 171px 10px 401px 10px;
   text-align: center;
+}
+
+@media (max-width: 600px) {
+  .first-part__content {
+    padding: 120px 10px 230px 10px;
+  }
 }
 
 .first-part__title {
@@ -484,7 +490,7 @@ body {
 
 @media (max-width: 600px) {
   .second-part__content {
-    padding: 40px 10px 30px 10px;
+    padding: 30px 10px 30px 10px;
   }
 }
 
@@ -494,6 +500,12 @@ body {
 
 .second-part__title:not(:last-child) {
   margin-bottom: 61px;
+}
+
+@media (max-width: 600px) {
+  .second-part__title:not(:last-child) {
+    margin-bottom: 21px;
+  }
 }
 
 .second-part__title::before {
@@ -539,6 +551,12 @@ body {
 
 .second-part__subtitle:not(:last-child) {
   margin-bottom: 90px;
+}
+
+@media (max-width: 600px) {
+  .second-part__subtitle:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 @media (max-width: 800px) {
@@ -681,7 +699,13 @@ body {
 /* Вторая часть конец */
 /* Третья часть начало */
 .part__third {
-  padding: 61px 0 31px 0;
+  padding: 61px 10px 31px 10px;
+}
+
+@media (max-width: 600px) {
+  .part__third {
+    padding: 21px 10px 15px 10px;
+  }
 }
 
 .third-part__content {
@@ -700,6 +724,12 @@ body {
 
 .third-part__title:not(:last-child) {
   margin-bottom: 60px;
+}
+
+@media (max-width: 600px) {
+  .third-part__title:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 
 .third-part__items {
@@ -775,6 +805,12 @@ body {
 
 .title-third-part__text:not(:last-child) {
   margin-bottom: 61px;
+}
+
+@media (max-width: 600px) {
+  .title-third-part__text:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .title-third-part__line {
@@ -884,11 +920,23 @@ body {
 /* Четвертая часть начало */
 /* Четвертая часть конец */
 .fourth-part {
-  padding: 91px 0px 30px 0px;
+  padding: 91px 10px 30px 10px;
+}
+
+@media (max-width: 600px) {
+  .fourth-part {
+    padding: 21px 10px 15px 10px;
+  }
 }
 
 .fourth-part__title {
   margin-bottom: 60px;
+}
+
+@media (max-width: 600px) {
+  .fourth-part__title {
+    margin-bottom: 25px;
+  }
 }
 
 .fourth-part__text::before {
@@ -994,6 +1042,12 @@ body {
   margin-bottom: 22px;
 }
 
+@media (max-width: 600px) {
+  .description__subtitle:not(:last-child) {
+    margin-bottom: 11px;
+  }
+}
+
 .description__text {
   font-size: 13px;
   line-height: 1.385;
@@ -1003,6 +1057,12 @@ body {
 
 .description__text:not(:last-child) {
   margin-bottom: 26px;
+}
+
+@media (max-width: 600px) {
+  .description__text:not(:last-child) {
+    margin-bottom: 13px;
+  }
 }
 
 .info-description {
@@ -1121,7 +1181,13 @@ body {
 /*Конец четвертой части*/
 /*Начало пятой части*/
 .fifth-part {
-  padding: 61px 0px 0px 30px;
+  padding: 61px 10px 30px 10px;
+}
+
+@media (max-width: 600px) {
+  .fifth-part {
+    padding: 21px 10px 15px 10px;
+  }
 }
 
 .fifth-part__text::before {
@@ -1176,6 +1242,12 @@ body {
 
 .fifth-part__title {
   margin-bottom: 60px;
+}
+
+@media (max-width: 600px) {
+  .fifth-part__title {
+    margin-bottom: 30px;
+  }
 }
 
 .item-object__chef {
@@ -1237,4 +1309,394 @@ body {
           flex: 1 1 auto;
 }
 
+.item-object__food {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 20px;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+}
+
+.food__picture {
+  border-radius: 2px;
+  padding: 0 0 20% 0;
+  overflow: hidden;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 33.333%;
+          flex: 1 1 33.333%;
+  max-width: 65px;
+}
+
+/*Можно подумать про оптимизацию добавления карточек разных размеров*/
 /*Конец пятой части*/
+/* Начало шестой части */
+.sixth-part {
+  padding: 100px 10px;
+}
+
+@media (max-width: 600px) {
+  .sixth-part {
+    padding: 30px 10px;
+  }
+}
+
+.sixth-part__title {
+  margin-bottom: 60px;
+}
+
+@media (max-width: 600px) {
+  .sixth-part__title {
+    margin-bottom: 30px;
+  }
+}
+
+.sixth-part__text::before {
+  content: "RECIPES";
+}
+
+@media (max-width: 800px) {
+  .sixth-part__text::before {
+    font-size: 80px;
+    -webkit-transform: translate(-48%, -50%);
+        -ms-transform: translate(-48%, -50%);
+            transform: translate(-48%, -50%);
+  }
+}
+
+@media (max-width: 600px) {
+  .sixth-part__text::before {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 525px) {
+  .sixth-part__text::before {
+    font-size: 40px;
+  }
+}
+
+.sixth-part__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -15px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sixth-part__item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 0 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  row-gap: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.sixth-part-element__small {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #252525;
+  border-radius: 6px;
+  padding: 30px 30px 20px 30px;
+  max-width: 540px;
+  margin: 0 auto;
+}
+
+.big-element-sixth-part {
+  border-radius: 6px;
+  background-color: #303030;
+  max-width: 540px;
+  margin: 0 auto;
+}
+
+.big-element-sixth-part__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.big-element-sixth-part__link {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #00000030;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.big-element-sixth-part__body {
+  padding: 60px 90px;
+  margin-top: -60px;
+}
+
+@media (max-width: 600px) {
+  .big-element-sixth-part__body {
+    padding: 20px 30px;
+    margin-top: 0px;
+  }
+}
+
+.big-element-sixth-part__title {
+  font-weight: 900;
+  font-size: 10px;
+  line-height: 1.5;
+  letter-spacing: 1.25px;
+  padding: 2px 16px;
+  min-height: 25px;
+  background-color: #00000030;
+  border-radius: 4px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.big-element-sixth-part__title:not(:last-child) {
+  margin-bottom: 65px;
+}
+
+@media (max-width: 600px) {
+  .big-element-sixth-part__title:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+.big-element-sixth-part__date {
+  font-size: 14px;
+  line-height: 2.14;
+}
+
+.big-element-sixth-part__date:not(:last-child) {
+  margin-bottom: 25px;
+}
+
+@media (max-width: 600px) {
+  .big-element-sixth-part__date:not(:last-child) {
+    margin-bottom: 12px;
+  }
+}
+
+@media (max-width: 800px) {
+  .big-element-sixth-part__date {
+    font-size: 12px;
+  }
+}
+
+.big-element-sixth-part__text {
+  font-size: 24px;
+  line-height: 1.67;
+}
+
+.big-element-sixth-part__text:not(:last-child) {
+  margin-bottom: 45px;
+}
+
+@media (max-width: 600px) {
+  .big-element-sixth-part__text:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 800px) {
+  .big-element-sixth-part__text {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  .big-element-sixth-part__text {
+    margin-bottom: 18px;
+  }
+}
+
+.big-element-sixth-part__author {
+  font-size: 14px;
+  line-height: 2.14;
+}
+
+.big-element-sixth-part__author:not(:last-child) {
+  margin-bottom: 60px;
+}
+
+@media (max-width: 600px) {
+  .big-element-sixth-part__author:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+.block-small-element__info {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-column-gap: 24px;
+          column-gap: 24px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 2.5;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.block-small-element__box {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.block-small-element__box:not(:last-child) {
+  margin-right: 15px;
+}
+
+.views {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.views__icon {
+  width: 26px;
+}
+
+.views__icon:not(:last-child) {
+  margin-right: 14px;
+}
+
+.views__number:not(:last-child) {
+  margin-right: 14px;
+}
+
+.comments {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.comments__icon {
+  width: 26px;
+}
+
+.comments__icon:not(:last-child) {
+  margin-right: 14px;
+}
+
+.comments__number:not(:last-child) {
+  margin-right: 14px;
+}
+
+.small-element {
+  min-width: 350px;
+}
+
+.small-element__text {
+  font-size: 16px;
+  line-height: 1.875;
+}
+
+@media (max-width: 600px) {
+  .small-element__text {
+    font-size: 12px;
+  }
+}
+
+.small-element__block {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.small-element__block:not(:last-child) {
+  margin-right: 15px;
+}
+
+.block-small-element__link {
+  font-size: 10px;
+  line-height: 1.5;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+  background-color: #000000ce;
+  border-radius: 4px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2px 16px;
+  min-height: 25px;
+}
+
+.block-small-element__link:not(:last-child) {
+  margin-right: 15px;
+}
+
+.block-small-element__data {
+  font-size: 12px;
+  line-height: 2.08;
+  color: #b3b3b3;
+}
+
+@media (max-width: 600px) {
+  .block-small-element__data {
+    font-size: 10px;
+  }
+}
