--- a/css/style.scss
+++ b/css/style.scss
@@ -272,8 +272,11 @@ body{
 	}
 
 	&__content {
-		padding: 171px 0px 401px 0px;
+		padding: 171px 10px 401px 10px;
 		text-align: center;
+		@media (max-width: 600px) {
+			padding: 120px 10px 230px 10px;
+		}
 	}
 
 	&__title {
@@ -398,7 +401,7 @@ body{
 		padding: 105px 65px 90px 65px;
 		text-align: center;
 		@media (max-width: 600px) {
-			padding: 40px 10px 30px 10px;
+			padding: 30px 10px 30px 10px;
 		}
 	}
 
@@ -406,7 +409,9 @@ body{
 		position: relative;
 		&:not(:last-child){
 			margin-bottom: 61px;
-			
+			@media (max-width: 600px) {
+				margin-bottom: 21px;
+			}
 		}
 		&::before{
 			content: "ABOUT";
@@ -441,7 +446,9 @@ body{
 		margin: 0 auto;
 		&:not(:last-child){
 			margin-bottom: 90px;
-			
+			@media (max-width: 600px) {
+				margin-bottom: 30px;
+			}
 		}
 		@media (max-width: 800px) {
 			font-size: 14px;
@@ -539,7 +546,10 @@ body{
 .part {
 
 	&__third {
-		padding: 61px 0 31px 0;
+		padding: 61px 10px 31px 10px;
+		@media (max-width: 600px) {
+			padding: 21px 10px 15px 10px;
+		}
 	}
 }
 .third-part {
@@ -557,6 +567,9 @@ body{
 	&__title {
 		&:not(:last-child){
 			margin-bottom: 60px;
+			@media (max-width: 600px) {
+				margin-bottom: 20px;
+			}
 		}
 		text-align: center;
 	}
@@ -612,7 +625,9 @@ body{
 	&__text {
 		&:not(:last-child){
 			margin-bottom: 61px;
-			
+			@media (max-width: 600px) {
+				margin-bottom: 30px;
+			}
 		}
 		
 
@@ -708,12 +723,18 @@ body{
 	}
 }
 .fourth-part {
-	padding: 91px 0px 30px 0px;
+	padding: 91px 10px 30px 10px;
+	@media (max-width: 600px) {
+		padding: 21px 10px 15px 10px;
+	}
 
 	&__container {
 	}
 	&__title{
 		margin-bottom: 60px;
+		@media (max-width: 600px) {
+			margin-bottom: 25px;
+		}
 	}
 	&__text {
 		&::before{
@@ -797,6 +818,9 @@ body{
 		&:not(:last-child){
 
 			margin-bottom: 22px;
+			@media (max-width: 600px) {
+				margin-bottom: 11px;
+			}
 		}
 	}
 
@@ -808,6 +832,9 @@ body{
 		&:not(:last-child){
 
 			margin-bottom: 26px;
+			@media (max-width: 600px) {
+				margin-bottom: 13px;
+			}
 		}
 	}
 
@@ -921,7 +948,10 @@ body{
 	}
 }
 .fifth-part {
-	padding: 61px 0px 0px 30px;
+	padding: 61px 10px 30px 10px;
+	@media (max-width: 600px) {
+		padding: 21px 10px 15px 10px;
+	}
 
 	&__container {
 	}
@@ -961,6 +991,9 @@ body{
 
 	&__title {
 		margin-bottom: 60px;
+		@media (max-width: 600px) {
+			margin-bottom: 30px;
+		}
 	}
 }
 .item-object {
@@ -1011,15 +1044,321 @@ body{
 	}
 
 	&__food {
+		display: flex;
+		flex-wrap: wrap;
+		row-gap: 20px;
+		column-gap: 20px;
+
 	}
 }
 .food {
 
 	&__picture {
+		border-radius: 2px;
+		padding: 0 0 20% 0;
+		overflow: hidden;
+		flex: 1 1 33.333%;
+		max-width: 65px;
 	}
 
 	&__image {
 	}
 }
-
+/*Можно подумать про оптимизацию добавления карточек разных размеров*/
 /*Конец пятой части*/
+/* Начало шестой части */
+.part {
+
+	&__sixth {
+	}
+}
+.sixth-part {
+	padding: 100px 10px;
+	@media (max-width: 600px) {
+		padding: 30px 10px;
+	}
+
+	&__container {
+	}
+
+	&__title {
+		margin-bottom: 60px;
+		@media (max-width: 600px) {
+			margin-bottom: 30px;
+		}
+	}
+
+	&__text {
+		&::before{
+			content: "RECIPES";
+			@media (max-width: 800px) {
+				font-size: 80px;
+				transform: translate(-48%,-50%);
+			}
+			@media (max-width: 600px) {
+				font-size: 60px;
+			}
+			@media (max-width: 525px) {
+				font-size: 40px;
+			}
+		}
+	}
+
+	&__content {
+		display: flex;
+		margin: 0 -15px;
+		flex-wrap: wrap;
+		row-gap: 20px;
+		justify-content: center;
+	}
+
+	&__item {
+		flex: 1 1 50%;
+		padding: 0 15px;
+		display: flex;
+		row-gap: 20px;
+		flex-direction: column;
+	}
+}
+
+.six-part {
+
+	&__item {
+
+		&_big {
+		}
+	}
+}
+.sixth-part-element {
+
+	&__big {
+	}
+
+	&__small {
+		display: flex;
+		flex-direction: column;
+		background-color: #252525;
+		border-radius: 6px;
+		padding: 30px 30px 20px 30px;
+		max-width: 540px;
+		margin: 0 auto;
+	}
+}
+.big-element-sixth-part {
+	border-radius: 6px;
+	background-color: #303030;
+	max-width: 540px;
+	margin: 0 auto;
+
+
+	&__content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+	}
+
+	&__link {
+		align-self: flex-end;
+		width: 30px;
+		height: 30px;
+		border-radius: 50%;
+		background-color: #00000030;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	&__body {
+		padding: 60px 90px;
+		margin-top: -60px;
+		@media (max-width: 600px) {
+			padding: 20px 30px;
+			margin-top: 0px;
+		}
+	}
+
+	&__title {
+		font-weight: 900;
+		font-size: 10px;
+		line-height: 1.5;
+		letter-spacing: 1.25px;
+		padding: 2px 16px;
+		min-height: 25px;
+		background-color: #00000030;
+		border-radius: 4px;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		&:not(:last-child){
+			margin-bottom: 65px;
+			@media (max-width: 600px) {
+				margin-bottom: 30px;
+			}
+		}
+
+	}
+
+	&__date {
+		&:not(:last-child){
+			margin-bottom: 25px;
+			@media (max-width: 600px) {
+				margin-bottom: 12px;
+			}
+		}
+		font-size: 14px;
+		line-height: 2.14;
+		@media (max-width: 800px) {
+			font-size: 12px;
+		}
+	}
+
+	&__text {
+		&:not(:last-child){
+			margin-bottom: 45px;
+			@media (max-width: 600px) {
+				margin-bottom: 20px;
+			}
+		}
+		font-size: 24px;
+		line-height: 1.67;
+		@media (max-width: 800px) {
+			font-size: 20px;
+		}
+		@media (max-width: 600px) {
+			margin-bottom: 18px;
+		}
+	}
+
+	&__author {
+		&:not(:last-child){
+			margin-bottom: 60px;
+			@media (max-width: 600px) {
+				margin-bottom: 20px;
+			}
+		}
+		font-size: 14px;
+		line-height: 2.14;
+	}
+}
+.big-element-six-part {
+
+	&__pic {
+	}
+}
+.block-small-element {
+
+	&__info {
+		display: inline-flex;
+		column-gap: 24px;
+		font-weight: 700;
+		font-size: 12px;
+		line-height: 2.5;
+		align-items: center;
+	}
+
+	&__box {
+		&:not(:last-child){
+			margin-right: 15px;
+		}
+		display:inline-flex;
+		align-items: center;
+	}
+
+}
+.info-block-small-element {
+
+	&__views {
+	}
+
+	&__comments {
+	}
+}
+.views {
+	display: inline-flex;
+	align-items: center;
+	&__icon {
+		width: 26px;
+		&:not(:last-child){
+			margin-right: 14px;
+		}
+	}
+
+	&__number {
+		&:not(:last-child){
+			margin-right: 14px;
+		}
+	}
+}
+.comments {
+	display: inline-flex;
+	align-items: center;
+	&__icon {
+		width: 26px;
+		&:not(:last-child){
+			margin-right: 14px;
+		}
+	}
+
+	&__number {
+		&:not(:last-child){
+			margin-right: 14px;
+		}
+	}
+}
+.small-element {
+	min-width: 350px;
+
+	&__text {
+		font-size: 16px;
+		line-height: 1.875;
+		@media (max-width: 600px) {
+			font-size: 12px;
+		}
+	}
+
+	&__block {
+		&:not(:last-child){
+			margin-right: 15px;
+		}
+		display: inline-flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+}
+.block-small-element {
+
+	&__link {
+		font-size: 10px;
+		line-height: 1.5;
+		letter-spacing: 1.25px;
+		text-transform: uppercase;
+		background-color: #000000ce;
+		border-radius: 4px;
+		display:inline-flex;
+		align-items: center;
+		justify-content: center;
+		padding: 2px 16px;
+		min-height: 25px;
+		
+		&:not(:last-child){
+			margin-right: 15px;
+		}
+	}
+
+	&__data {
+		font-size: 12px;
+		line-height: 2.08;
+		color: #b3b3b3;
+		@media (max-width: 600px) {
+			font-size: 10px;
+		}
+
+	}
+	
+}
+
+
+
+
+
